# pyaermod

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  01_Getting_Started.ipynb  02_Point_Source_Modeling.ipynb  03_Area_Source_Modeling.ipynb  04_Parameter_Sweeps.ipynb  05_Visualization.ipynb  CHANGELOG.md  COMPLETE_PACKAGE_SUMMARY.md  CONTINUATION_NOTES.md  CONTRIBUTING.md  DEVELOPMENT_PROGRESS.md  Dockerfile  FILE_MANIFEST.md  FINAL_DELIVERY.md  GETTING_STARTED_CHECKLIST.md  GITHUB_AUTH_GUIDE.md  GITHUB_README.md  GITHUB_SETUP_GUIDE.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  README.md  RELEASING.md  SESSION_SUMMARY.md  aermap_discrete.inp  aermap_grid.inp  aermet_stage3.inp  area_rectangular_example.inp  building_downwash_example.inp  debug.out  end_to_end_example.py  example_area_sources.py  example_bpip.py  example_line_sources.py  example_met_download.py  (+33 more)
.github/workflows/: publish.yml  tests.yml
aermet/aermet_source_code_24142/: aermet  aermet.f90  mod_main1.f90  mod_onsite.f90  mod_pbl.f90  mod_reports.f90  mod_surface.f90  mod_upperair.f90
aermod/: aermod  intel_ifx_aermod.bat
aermod_results/: test_run_concentrations_ANNUAL.csv  test_run_receptors.csv  test_run_sources.csv
benchmarks/: README.md  bench_input_gen.py  bench_output_parse.py  bench_postfile.py
docs/: architecture.md  gui-guide.md  index.md  quickstart.md
docs/api/: advanced_viz.md  aermap.md  aermet.md  bpip.md  geospatial.md  gui.md  index.md  input_generator.md  output_parser.md  postfile.md  runner.md  terrain.md  validator.md  visualization.md
docs/teaching/: README.md  student-guide.md
examples/: area_sources.py  bpip.py  deposition_modeling.py  end_to_end.py  line_sources.py  volume_sources.py
examples/notebooks/: 01_Getting_Started.ipynb  02_Point_Source_Modeling.ipynb  03_Area_Source_Modeling.ipynb  04_Parameter_Sweeps.ipynb  05_Visualization.ipynb  06_Postfile_Analysis.ipynb  07_Advanced_Features.ipynb
scripts/: build_aermod.sh
src/pyaermod/: __init__.py  _gui_runner.py  advanced_viz.py  aermap.py  aermet.py  geospatial.py  gui.py  input_generator.py  output_parser.py  postfile.py  runner.py  terrain.py  validator.py  visualization.py
tests/: __init__.py  conftest.py  test_advanced_features.py  test_aermap.py  test_aermet.py  test_bpip.py  test_coverage_gaps.py  test_epa_cases.py  test_geospatial.py  test_gui.py  test_init.py  test_input_generator.py  test_integration.py  test_output_parser.py  test_postfile.py  test_priority2_gaps.py  test_property_based.py  test_real_aermet.py  test_real_cases.py  test_runner.py  test_terrain.py  test_validator.py  test_visualization.py
