[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaermod"
version = "1.1.0"
description = "Python wrapper for EPA's AERMOD air dispersion model"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Shannon Capps", email = "shannon.capps@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["aermod", "air quality", "dispersion", "modeling", "atmospheric"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/atmmod/pyaermod"
Documentation = "https://atmmod.github.io/pyaermod/"
Repository = "https://github.com/atmmod/pyaermod"
Issues = "https://github.com/atmmod/pyaermod/issues"
Changelog = "https://github.com/atmmod/pyaermod/blob/main/CHANGELOG.md"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "folium>=0.12.0",
]
geo = [
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
    "rasterio>=1.2.0",
    "shapely>=1.8.0",
    "scipy>=1.7.0",
]
gui = [
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    "folium>=0.14.0",
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
    "rasterio>=1.2.0",
    "shapely>=1.8.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]
terrain = [
    "requests>=2.25.0",
]
all = [
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
    "folium>=0.14.0",
    "pyproj>=3.0.0",
    "geopandas>=0.10.0",
    "rasterio>=1.2.0",
    "shapely>=1.8.0",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    "requests>=2.25.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "hypothesis>=6.82.0",
    "build",
    "twine",
]

[project.scripts]
pyaermod = "pyaermod:print_info"
pyaermod-gui = "pyaermod.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (let formatter handle)
    "E741",   # ambiguous variable name (l, O, I) — used in AERMOD context
    "B008",   # function call in default argument (dataclass field())
    "B905",   # zip() without strict= (not always needed)
    "RUF012", # mutable class variables (dataclass pattern)
    "SIM108", # use ternary operator (readability preference)
    "UP006",  # use builtin type instead of typing (List -> list) — keep existing style
    "UP007",  # use X | Y instead of Union[X, Y] — keep existing style
    "UP035",  # deprecated import from typing — keep existing style
    "UP045",  # use X | None instead of Optional[X] — keep existing style
    "RUF001", # ambiguous unicode character in string (degree symbols etc.)
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "F841", "F401"]
"src/pyaermod/__init__.py" = ["F401", "RUF022"]
"src/pyaermod/gui.py" = ["E402"]
"benchmarks/*" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["pyaermod"]
